change settings of SecurityConfig